수정사항 적용 1. Code Smell 수정 및 테스트코드 중간푸시 2. MockWebServer 를 통한 테스트시 테스트 커버리지 오르지않는문제